# clickhouse-plan-visualizer

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: graphviz_visitor.py  main.py  query_plan.py
templates/: index.html.j2  plan.html.j2
